--- a/proposal-web/src/styles/Navigation.module.css
+++ b/proposal-web/src/styles/Navigation.module.css
@@ -29,6 +29,10 @@
   background-color: rgba(0, 0, 0, 0.3);
 }
 
+.navOverlayConclusion {
+  background-color: rgba(220, 38, 38, 0.28);
+}
+
 .navOverlayGarantias {
   background-color: rgba(220, 38, 38, 0.2);
 }
@@ -59,6 +63,10 @@
 }
 
 .navTextComparativa {
+  color: #ffffff;
+}
+
+.navTextConclusion {
   color: #ffffff;
 }
 
